  ! Crypto: Implemented VAES instructions / VPCLMULQDQ / GFNI instruction
  ! VMX: Implement EPT-Based Sub-Page Protection
  ! CPUID: Added Skylake-X CPU definition (features AVX-512 support)
  ! CPUID: Added Cannonlake CPU definition (features more AVX-512 levels, UMIP, SHA, PKU support)
  ! CPUID: Added Icelake-U CPU definition (features more AVX-512 levels, UMIP, SHA, GFNI, VAES, PKU support)

- Bochs Debugger and Instrumentation
  - Added support for conditional breakpoints and conditional step/continue to Bochs debugger
  - Support 'info tab' command for 64-bit mode as well
  - Bochs debugger improvements patch by Doug Gale
    - better handling of 64-bit addresses in the debugger, added support for 64 bit symbols,
      added more symbol lookups.

- I/O Devices
  - PCI
    - Added basic support for the i440BX PCI/AGP chipset.
  - Timers
    - Implemented HPET emulation (ported from Qemu).
  - Hard drive / HD image
    - Added support for unlocking disk images (locks leftover from previous
      Bochs session) with the new command line argument '-unlock'.
    - Added ATAPI command "get event status notification".
    - Bugfix: undoable/volatile mode images now inherit the base image geometry
      if present.
  - Voodoo
    - Voodoo1 emulation speedup with combined PCI / memory FIFO implementation
      and multi-threading support (separate FIFO thread).
    - Voodoo2 model now working after some fixes and implementation of the
      CMDFIFO (using FIFO thread) and one of the bitBLT functions.
    - Added Voodoo Banshee / Voodoo3 emulation support (still under construction,
      but basicly usable). The AGP models are available if chipset is i440BX.
  - Display (general)
    - Added basic DDC support for Bochs VBE, Cirrus and Voodoo Banshee / Voodoo3
      adapters (reporting plug&play monitor "Bochs Screen").
  - USB
    - Now creating separate plugins for each USB device implementation.